[package]
name = "port-manager"
version = "0.1.0"
edition = "2021"
description = "CLI tool to manage processes running on ports"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
tokio = { version = "1.36.0", features = ["full"] }
sysinfo = "0.30.5"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
directories = "5.0.1"
